Fix angle deco on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -834,9 +834,8 @@ blockquote footer {
 
     .angle {
         top: 32px;
-        right: 10px;
-        width: 400px;
-        overflow: visible;
+        right: 2px;
+        width: 240px;
     }
 
     /* Project Grid */
